hoppscotch/templates/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoppscotch-backend
spec:
  selector:
    app: hoppscotch-backend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: backend
      name: backend
    - protocol: TCP
      port: 3100
      targetPort: admin
      name: admin
  type: NodePort
