hoppscotch/templates/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: postgresql
      nodePort: 5432
  type: NodePort
