hoppscotch/templates/proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoppscotch-proxy-svc
spec:
  selector:
    app: hoppscotch-proxy-app
  ports:
    - protocol: TCP
      port: 9159
      targetPort: 9159
      nodePort: 9159
  type: NodePort
