hoppscotch/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoppscotch-fronted
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
      targetPort: web
      nodePort: 3000
  type: NodePort
  selector:
    app: hoppscotch-fronted
