hoppscotch/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoppscotch-ingress
spec:
  rules:
    - host: hoppscotch.zcrjjh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoppscotch-svc
                port:
                  number: 3000
    - host: hoppscotch-proxy.zcrjjh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoppscotch-proxy-svc
                port:
                  number: 9159
